Fix mobile view

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html class="no-js" lang="fr">
   	<head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<meta name="viewport" content="width=device-width"/>
     <title>Casa2bitcoin</title>
     <link rel="icon" type="image/png" href="img/bitcoin_logo.png" />
 
